// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalSettingsViewPage should render correctly when entities exist 1`] = `
<BaseLayout
  description="my description"
  exportEnabled={false}
  myFaresEnabled={false}
  referer={null}
  showNavigation={true}
  title="my title"
>
  <div
    className="govuk-width-container"
    data-card-count={3}
  >
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-one-quarter"
      >
        <SubNavigation />
      </div>
      <div
        className="govuk-grid-column-three-quarters"
      >
        <h1
          className="govuk-heading-xl"
        >
          my title
        </h1>
        <p
          className="govuk-body govuk-!-margin-bottom-8"
        >
          my description
        </p>
        <div
          className="card-row"
        >
          <div
            className="card"
            key="7"
          >
            <div
              className="card__body my-entity-description"
            >
              <div
                className="card__actions"
              >
                <ul
                  className="actions__list"
                >
                  <li
                    className="actions__item"
                  >
                    <a
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                      href="/manageMyEntityDescription?id=7"
                    >
                      Edit
                    </a>
                  </li>
                </ul>
              </div>
              <CardBody
                entity={
                  Object {
                    "id": 7,
                    "name": "name seven",
                  }
                }
              />
            </div>
          </div>
          <div
            className="card"
            key="17"
          >
            <div
              className="card__body my-entity-description"
            >
              <div
                className="card__actions"
              >
                <ul
                  className="actions__list"
                >
                  <li
                    className="actions__item"
                  >
                    <a
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                      href="/manageMyEntityDescription?id=17"
                    >
                      Edit
                    </a>
                  </li>
                </ul>
              </div>
              <CardBody
                entity={
                  Object {
                    "id": 17,
                    "name": "name seventeen",
                  }
                }
              />
            </div>
          </div>
          <div
            className="card"
            key="1"
          >
            <div
              className="card__body my-entity-description"
            >
              <div
                className="card__actions"
              >
                <ul
                  className="actions__list"
                >
                  <li
                    className="actions__item"
                  >
                    <a
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                      href="/manageMyEntityDescription?id=1"
                    >
                      Edit
                    </a>
                  </li>
                </ul>
              </div>
              <CardBody
                entity={
                  Object {
                    "id": 1,
                    "name": "another one",
                  }
                }
              />
            </div>
          </div>
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/manageMyEntityDescription"
        >
          Add a 
          my entity description
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`GlobalSettingsViewPage should render correctly when entities exist and delete is enabled 1`] = `
<BaseLayout
  description="my description"
  exportEnabled={false}
  myFaresEnabled={false}
  referer={null}
  showNavigation={true}
  title="my title"
>
  <div
    className="govuk-width-container"
    data-card-count={3}
  >
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-one-quarter"
      >
        <SubNavigation />
      </div>
      <div
        className="govuk-grid-column-three-quarters"
      >
        <h1
          className="govuk-heading-xl"
        >
          my title
        </h1>
        <p
          className="govuk-body govuk-!-margin-bottom-8"
        >
          my description
        </p>
        <div
          className="card-row"
        >
          <div
            className="card"
            key="7"
          >
            <div
              className="card__body my-entity-description"
            >
              <div
                className="card__actions"
              >
                <ul
                  className="actions__list"
                >
                  <li
                    className="actions__item"
                  >
                    <a
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                      href="/manageMyEntityDescription?id=7"
                    >
                      Edit
                    </a>
                  </li>
                  <li
                    className="actions__item"
                  >
                    <button
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                      onClick={[Function]}
                    >
                      Delete
                    </button>
                  </li>
                </ul>
              </div>
              <CardBody
                entity={
                  Object {
                    "id": 7,
                    "name": "name seven",
                  }
                }
              />
            </div>
          </div>
          <div
            className="card"
            key="17"
          >
            <div
              className="card__body my-entity-description"
            >
              <div
                className="card__actions"
              >
                <ul
                  className="actions__list"
                >
                  <li
                    className="actions__item"
                  >
                    <a
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                      href="/manageMyEntityDescription?id=17"
                    >
                      Edit
                    </a>
                  </li>
                  <li
                    className="actions__item"
                  >
                    <button
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                      onClick={[Function]}
                    >
                      Delete
                    </button>
                  </li>
                </ul>
              </div>
              <CardBody
                entity={
                  Object {
                    "id": 17,
                    "name": "name seventeen",
                  }
                }
              />
            </div>
          </div>
          <div
            className="card"
            key="1"
          >
            <div
              className="card__body my-entity-description"
            >
              <div
                className="card__actions"
              >
                <ul
                  className="actions__list"
                >
                  <li
                    className="actions__item"
                  >
                    <a
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                      href="/manageMyEntityDescription?id=1"
                    >
                      Edit
                    </a>
                  </li>
                  <li
                    className="actions__item"
                  >
                    <button
                      className="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                      onClick={[Function]}
                    >
                      Delete
                    </button>
                  </li>
                </ul>
              </div>
              <CardBody
                entity={
                  Object {
                    "id": 1,
                    "name": "another one",
                  }
                }
              />
            </div>
          </div>
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/manageMyEntityDescription"
        >
          Add a 
          my entity description
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`GlobalSettingsViewPage should render correctly when no entities 1`] = `
<BaseLayout
  description="my description"
  exportEnabled={false}
  myFaresEnabled={false}
  referer={null}
  showNavigation={true}
  title="my title"
>
  <div
    className="govuk-width-container"
    data-card-count={0}
  >
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-one-quarter"
      >
        <SubNavigation />
      </div>
      <div
        className="govuk-grid-column-three-quarters"
      >
        <h1
          className="govuk-heading-xl"
        >
          my title
        </h1>
        <p
          className="govuk-body govuk-!-margin-bottom-8"
        >
          my description
        </p>
        <div
          className="govuk-heading-m"
        >
          <p
            className="govuk-body"
          >
            <em>
              You currently have no 
              my entity description
              s saved.
            </em>
          </p>
          <a
            className="govuk-button"
            data-module="govuk-button"
            href="/manageMyEntityDescription"
          >
            Add a 
            my entity description
          </a>
        </div>
      </div>
    </div>
  </div>
</BaseLayout>
`;
